--- a/contact.html
+++ b/contact.html
@@ -1,58 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact Us | QuantivusMings</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <title>Contact - QuantivusMings</title>
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    .contact-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      gap: 2rem;
+      padding: 2rem;
+    }
+
+    .contact-form, .map, .testimonials {
+      flex: 1 1 45%;
+      min-width: 300px;
+    }
+
+    form input, form textarea {
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
+    }
+
+    form button {
+      margin-top: 1rem;
+      background-color: #003366;
+      color: white;
+      padding: 10px 15px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    .map iframe {
+      width: 100%;
+      height: 300px;
+      border: none;
+      border-radius: 10px;
+    }
+
+    .testimonials blockquote {
+      background: #f9f9f9;
+      border-left: 5px solid #00d8ff;
+      margin: 1rem 0;
+      padding: 1rem;
+      font-style: italic;
+      border-radius: 5px;
+    }
+
+    .contact-info {
+      margin-top: 2rem;
+      font-size: 0.95rem;
+      color: #444;
+    }
+  </style>
 </head>
-
-<body class="bg-white text-gray-900">
-  <header class="bg-blue-600 text-white p-6">
-    <div class="max-w-7xl mx-auto flex justify-between items-center">
-      
-<div class="flex items-center space-x-4">
-  <img src="logo.png" alt="QuantivusMings Logo" class="h-12 w-12">
-  <div>
-    <h1 class="text-2xl font-bold text-blue-600">QuantivusMings</h1>
-    <p class="text-sm text-gray-600 italic">Empowering Digital Infrastructure</p>
-  </div>
-</div>
-
-      <nav class="space-x-4">
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="why.html">Why Us</a>
-        <a href="contact.html" class="text-yellow-200 font-semibold">Contact</a>
-      </nav>
-    </div>
+<body>
+  <header>
+    <img src="assets/logo.png" alt="QuantivusMings Logo" class="logo" />
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="contact.html" style="color: #00d8ff;">Contact</a></li>
+      </ul>
+    </nav>
   </header>
-  <main class="max-w-3xl mx-auto py-12 px-4" data-aos="fade-up">
-    <h2 class="text-3xl font-bold mb-6">Get in Touch</h2>
-    <form action="https://formspree.io/f/mayrdjly" method="POST" class="space-y-4">
-      <div>
-        <label class="block font-semibold mb-1">Name</label>
-        <input type="text" name="name" class="w-full border border-gray-300 rounded px-3 py-2" required />
-      </div>
-      <div>
-        <label class="block font-semibold mb-1">Email</label>
-        <input type="email" name="_replyto" class="w-full border border-gray-300 rounded px-3 py-2" required />
-      </div>
-      <div>
-        <label class="block font-semibold mb-1">Message</label>
-        <textarea name="message" class="w-full border border-gray-300 rounded px-3 py-2" rows="4" required></textarea>
-      </div>
-      <button type="submit" class="bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-700">Send Message</button>
-    </form>
-  </main>
-  
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-  AOS.init();
-</script>
 
+  <main>
+    <section class="contact-container">
+      <!-- Contact Form -->
+      <div class="contact-form">
+        <h2>Get in Touch</h2>
+        <form action="https://formspree.io/f/xvgqkjde" method="POST">
+          <label for="name">Name</label>
+          <input type="text" id="name" name="name" required />
+
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" required />
+
+          <label for="message">Message</label>
+          <textarea id="message" name="message" rows="5" required></textarea>
+
+          <button type="submit">Send Message</button>
+        </form>
+
+        <div class="contact-info">
+          <p><strong>Address:</strong><br/>
+            214 - Company Name,<br/>
+            Raghuleela Mall, Kandivali West,<br/>
+            Maharashtra, Mumbai - 400067, India</p>
+          <p><strong>Phone:</strong> 9000090000</p>
+        </div>
+      </div>
+
+      <!-- Google Map -->
+      <div class="map">
+        <h2>Find Us</h2>
+        <iframe
+          src="https://www.google.com/maps?q=Raghuleela+Mall,+Kandivali+West,+Mumbai,+India&output=embed"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </section>
+
+    <!-- Testimonials -->
+    <section class="testimonials" style="padding: 2rem;">
+      <h2>What Clients Say</h2>
+      <blockquote>
+        “QuantivusMings transformed our infrastructure with an expert cloud migration—zero downtime, full automation!”
+        <footer>— CTO, Global Manufacturing Firm</footer>
+      </blockquote>
+      <blockquote>
+        “Their Linux and Windows management across hybrid infrastructure is unmatched. Highly recommend.”
+        <footer>— IT Manager, Retail Solutions Inc.</footer>
+      </blockquote>
+    </section>
+  </main>
+
+  <footer>
+    &copy; 2025 QuantivusMings. All rights reserved.
+  </footer>
 </body>
 </html>
